# ForeverValidator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-windows.bat  vcpkg.json
.github/workflows/: windows.yml
include/forevervalidator/: json.h  native.h  result.h  validation.h
include/forevervalidator/experimental/: physics_sandbox.h
scripts/: build-windows.ps1
src/app/cli/: forevervalidator.cpp
src/engine/: README.md
src/engine/core/: binary32_math.cpp  binary32_math.h  cfast_buffer.h  classic_buffer.h  cmw_nod.cpp  cmw_nod.h  engine_types.h  fast_algo.cpp  fast_algo.h  fast_string.cpp  fast_string.h  finite_values.h  func_keys_real.cpp  func_keys_real.h  func_tree.h  gm_bounds.cpp  gm_func.cpp  gm_func.h  gm_map2.cpp  gm_map2.h  gm_matrix.cpp  gm_quaternion.cpp  gm_transform.cpp  gm_types.h  gm_vector.cpp  gx_color.h  gx_tex_coord.cpp  gx_tex_coord.h  mw_cmd.cpp  mw_cmd.h  mw_cmd_buffer_core.cpp  mw_cmd_buffer_core.h  mw_engine.h  mw_id.cpp  mw_id.h  mw_timer.cpp  mw_timer.h  owned_or_borrowed.h  strided_array.h  vertex_attribute.cpp  (+1 more)
src/engine/game/: block_placement_state.h  block_race_role.h  control.cpp  control.h  ctn_forced_mods.h  game_app.cpp  game_app.h  game_catalog.cpp  game_catalog_assets.h  game_ctn_app.cpp  game_ctn_app.h  game_ctn_block.cpp  game_ctn_block.h  game_ctn_block_info.cpp  game_ctn_block_info.h  game_ctn_block_info_mobils.cpp  game_ctn_block_unit.cpp  game_ctn_block_unit.h  game_ctn_catalog.h  game_ctn_challenge.cpp  game_ctn_challenge.h  game_ctn_collection.cpp  game_ctn_collection.h  game_ctn_collector.cpp  game_ctn_collector.h  game_ctn_decoration.cpp  game_ctn_decoration.h  game_ctn_field_unit.cpp  game_ctn_field_unit.h  game_ctn_pylon_column.cpp  game_ctn_pylon_column.h  game_ctn_pylon_column_grid.cpp  game_ctn_pylon_column_grid.h  game_ctn_types.cpp  game_ctn_types.h  game_ctn_utils.cpp  game_ctn_utils.h  game_ctn_zone.cpp  game_ctn_zone.h  game_identifier.cpp  (+32 more)
src/engine/rendering/: plug.h  plug_bitmap.cpp  plug_bitmap.h  plug_bitmap_render.cpp  plug_bitmap_render.h  plug_image_pixels.h  plug_material.cpp  plug_material.h  plug_material_custom_parameters.cpp  plug_material_custom_parameters.h  plug_shader.cpp  plug_shader.h  plug_tree.cpp  plug_tree.h  plug_tree_bounds.cpp  plug_tree_generator.cpp  plug_tree_hierarchy.cpp  plug_tree_model.cpp  plug_tree_optimization.cpp  plug_tree_optimization.h  plug_tree_traversal.cpp  plug_tree_visual_mip.cpp  plug_vertex_declaration.h  plug_vertex_stream.cpp  plug_vertex_stream.h  plug_visual.cpp  plug_visual.h  plug_visual_copy.cpp  plug_visual_geometry.cpp  plug_visual_shader_requirements.cpp  plug_visual_skin.cpp  plug_visual_skin.h  plug_visual_texcoords.cpp  plug_visual_vertex_access.cpp
src/engine/resources/: asset_audience.cpp  asset_audience.h  asset_type.h  block_info_catalog.cpp  block_info_catalog.h  catalog_asset_handle.h  catalog_asset_repository.h  plug_file.h  plug_file_img.cpp  plug_file_img.h  plug_file_registry.cpp  plug_file_zip.cpp  plug_file_zip.h  static_solid_asset.cpp  static_solid_asset.h  system_engine.cpp  system_engine.h  system_fid.cpp  system_fid.h  system_fid_file.h  system_fid_file_core.cpp  system_fid_loaders.cpp  system_fid_memory.h  system_fid_ownership.cpp  system_fid_parameter_types.h  system_fid_parameters.cpp  system_fid_parameters.h  system_fids.cpp  system_fids.h  system_fids_paths.cpp  system_file.h  system_file_core.cpp  system_file_name.h  system_file_name_core.cpp  system_file_operations.cpp  system_file_operations.h  system_manager_file.cpp  system_manager_file.h  system_pack_desc.cpp  system_pack_desc.h  (+2 more)
src/engine/scene/: plug_audio.cpp  plug_audio.h  plug_physical_object.cpp  plug_physical_object.h  plug_solid.cpp  plug_solid.h  replay_scene_asset_placement.cpp  replay_scene_composite_asset.cpp  replay_scene_composite_asset.h  replay_scene_placements.cpp  replay_scene_placements.h  (+31 more)
(+390 files in other folders)
